# Privatemagic

./: .gitignore  API_DOCUMENTATION.md  Anchor.toml  README.md  next.config.ts  package-lock.json  package.json  render.yaml  test-advance-settle.js  test-force-close.js  test-force-undelegate.js  test-onchain-flow.js  test-winner-claim.js  test_claim_winnings.js  test_delegation.js  test_delegation_simple.js  test_er_focused.js  test_er_game_v2.js  test_final.js  test_full_er_game.js  test_full_game.js  test_idl.js  test_magicblock_diagnostic.js  test_magicblock_flow.js  test_master.js  test_minimal_er.js  test_program.mjs  test_raw_settle.js  test_real_game.js  test_settle_debug.js  test_settle_only.js  test_settle_simple.js  test_winner_settlement.js  test_winner_settlement_v2.js  verify_deployment.js
programs/privatepoker/: Cargo.toml
programs/privatepoker/src/: lib.rs
server/: README.md  index.js  package-lock.json  package.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/docs/: page.tsx
src/components/: ActionBar.tsx  BettingPanel.tsx  CommunityCards.tsx  GameInfo.tsx  GameLobby.tsx  Navbar.tsx  PlayerSeat.tsx  PlayingCard.tsx  PokerTable.tsx  TransactionFeed.tsx  WalletButton.tsx  WalletProvider.tsx
src/lib/: aiOpponent.ts  cards.ts  gameStore.ts  multiplayer.ts  onChainGame.ts  polyfills.ts  privatepoker_idl.json  solana.ts  solanaPoker.ts
